# everything-search-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
everything_mcp/: __init__.py  __main__.py  server.py
