[project]
name = "everything-search-mcp"
version = "0.0.1"
description = "基于 Everything 搜索引擎的 MCP (Model Context Protocol) 服务器，让 AI 助手能够搜索本地文件。"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["mcp", "everything", "search", "file-search", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "everytools>=0.2.2",
    "fastmcp>=2.0.0",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/miloira/everything-search-mcp"
Repository = "https://github.com/miloira/everything-search-mcp"
Issues = "https://github.com/miloira/everything-search-mcp/issues"

[project.scripts]
everything-search-mcp = "everything_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["everything_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
